--- a/ClickForService/PresentationLayer/Login.resx
+++ b/ClickForService/PresentationLayer/Login.resx
@@ -117,4 +117,79 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAHyAAAAEAIAAoEAAAFgAAACgAAAAfAAAAQAAAAAEAIAAAAAAAgA8AABILAAASCwAAAAAAAAAA
+        AAD9/f3/+vr6//b29v/y8vL/7u7u/+rq6v/p6en/5OTk/+Li4v/i4uL/4uLi/9/f3//Z2dn/2dnZ/9nZ
+        2f/Z2dn/2dnZ/9nZ2f/Z2dn/39/f/+Li4v/i4uL/4eHh/+Pj4//p6en/6urq/+7u7v/y8vL/9vb2//r6
+        +v/+/v7/5+fn/8rKyv+9vb3/tbW1/6+vr/+rq6v/qamp/6Wlpf+lpaX/paWl/6Wlpf+kpKT/oqKi/6Ki
+        ov+ioqL/oqKi/6Kiov+ioqL/oqKi/6SkpP+mpqb/p6en/6ioqP+pqan/qamp/6ysrP+wsLD/tbW1/729
+        vf/Kysr/5+fn//f39//r6+v/4+Pj/93d3f/b29v/3Nzc/9XV1f/U1NT/0NDQ/8jIyP/Gxsb/xsbG/8bG
+        xv/Gxsb/xsbG/8bGxv/Gxsb/xsbG/8fHx//Gxsb/wcHB/8HBwf/CwsL/x8fH/9TU1P/W1tb/2NjY/93d
+        3f/j4+P/6+vr//b29v//////////////////////8/Pz/9bW1v/Ozs7/39/f//v7+///////////////
+        ///////////////////////////////////8/Pz/6Ojo/9ra2v/Q0ND/ycnJ/7+/v//T09P/////////
+        //////////////////////////////7+/v//////5ubm/7+/v/+urq7/qKio/6Ghof/d3d3///////7+
+        /v//////////////////////////////////////7+/v/9fX1//MzMz/xsbG/76+vv+2trb/paWl/9bW
+        1v///////f39//7+/v/+/v7///////7+/v//////7Ozs/8vLy//CwsL/vLy8/7Kysv+srKz/7u7u////
+        ///+/v7/////////////////////////////////+/v7/+Li4v/Q0ND/zMzM/8TExP+8vLz/tbW1/6mp
+        qf+urq7/+/v7/////////////////////////////v7+/97e3v/Nzc3/xcXF/76+vv+zs7P/u7u7////
+        //////////////////////////////////////////////Hx8f/Y2Nj/zs7O/8nJyf/BwcH/urq6/6ur
+        q/+ysrL/2NjY//39/f////////////////////////////v7+//e3t7/z8/P/8nJyf/CwsL/ubm5/7e3
+        t//r6+v///////////////////////////////////////39/f/l5eX/0tLS/83Nzf/Hx8f/v7+//7Oz
+        s//Pz8//+/v7///////////////////////////////////////+/v7/5eXl/9HR0f/MzMz/xsbG/7+/
+        v/+1tbX/q6ur/8/Pz////////////////v/////////////////19fX/29vb/9DQ0P/MzMz/xMTE/7y8
+        vP+urq7/5OTk///////+/v7//v7+//////////////////////////////////Hx8f/X19f/zs7O/8rK
+        yv/CwsL/vLy8/7Gxsf+rq6v/9PTz/////////////v7+//39/P/+/v3/6unp/9TU1P/Pz8//ycnJ/8HB
+        wf+6urr/qqqq/8vLy//t7e3/9/f3///////+/v7////////////////////////////7+/v/4eHh/9HR
+        0f/Nzc3/xsbG/8DAwP+zs7L/wsLC/////////////P37//7+/v//////+/v8/9/h4v/P0M//zczL/8bG
+        xv+/v7//tLS0/6enp//U1NT/2tra/8PDw//W1tb//f39/////////////////////////////////+3t
+        7f/W1tb/z8/P/8rLy//Dw8L/ubq8/8TDwv/az7P/t59n/6iLSP+xmFr/xraK/9fPtv/X1Mz/1NXZ/83P
+        0//Dw8T/uLi3/7y8vP/q6ur////////////6+vr/zc3N/8HBwf/6+vr/////////////////////////
+        ///5+fn/39/f/9HR0f/Mzcv/yMrM/766rv+jh0j/l3Md/5t0Hf+ddyL/nHUf/5lyGv+YdSL/o4E5/7Ca
+        Z//AtZ7/xMPC/7W3u//h4uL///////39/f/+/v7//v7+///////Pz8//xcXF///////+/v7/////////
+        /////////////+zs7P/U09T/z9HS/83IwP+nikT/onwl/6WBMf+jfy//on0r/6F9LP+ifSz/oX0r/595
+        Jv+cdR//nXgk/6SISP+vooP/8vLw///////9/v3//////////////////f39/7y8vP/z8/P/////////
+        ///////////////////19fX/5ufl/9fX1f+zmF3/qIAq/6qFNf+ngjH/poEv/6WALv+jfiz/on0r/6F8
+        Kv+geyr/oXwr/6F8Kv+feCP/nHYi/6uSUv/q5dX///////7+/f/+/v7///////j4+P/AwMD/9/f3////
+        //////////////7+/v/8/P3//////8DD3v+RfnD/s4ox/6+JOf+thzX/rIY0/6uFM/+phDL/poEw/6aB
+        MP+lgC//o34s/6F8Kv+gfCr/oHwr/6F9LP+achz/pIZB//b17v////////////n5+f/FxcX/29vb////
+        ///+/v7///////7////9/f3//////5SVx/8xKW7/qIM9/7iRPf+yjDv/sYs5/7CKOP+thjX/r4gz/7SN
+        Nf+pgy3/on0s/6SAL/+mgjD/pIAu/6N/Lf+ifSv/o38t/5VsEP/ArX3//////93c2//ExMT/4ODg////
+        ///////////////////+/v///////2tsq/8AAHL/g2lY/8efQf+2kED/tpA+/7WPPf+yizr/vJY//7yg
+        X/+qk2//waZp/8mnUf+1jzf/pn8s/6aAKv+ieyP/oHol/6OBNf+qkln/vLKY/9DQ0f/X19f/9fX1////
+        ///+/v7////////////8/P3//////6+vzf8AAHT/Nix1/8SaTf++lkb/vZVF/7uUQv+4kUH/vpdA/6mN
+        ZP84M4j/FBKM/xwZg/9RR3//oY10/7+iWv+xk1X/vah+/8W6oP/MxbT/ycCt/7ejeP/n4tX///////7+
+        /f/+/v7//////////////////f3+//////9OTpr/AAB6/3pkaf/Spk3/wJdL/8KYSv/AmEj/v5ZF/7uV
+        S/+Siq3/p6ng/4WFw/9dXrH/eny8/6qpx//Uz8//1c28/8u8nf+/p3f/sZFN/6eCL/+edyD/5t/K////
+        ///9/fz////////////////////////////t7fP/GhuF/wkIe/+vj2X/0aVQ/8acT//FnE3/xZxO/8CV
+        Qv/IrXf/+//////+/f/y8ev/6+zp/4GCvP9MTLD/MjCb/6uQYP+xiCz/rIQu/66HM/+wijj/qYMy/+jg
+        y////////v79////////////////////////////29vo/w0Mfv8RDnr/vJ9x/9OoVf/MoFP/y6BR/8mf
+        Uf/HnEz/xqNZ/+7p1f///////Pz9//////9rbLf/AACS/xUUmv+jiGL/vpY//7SPQP+0jj3/s407/62H
+        Nv/r5dP///////7+/f///////////////////////////+bn8P8ZGYP/AAB//5F8e//kvWf/yp5S/9Cl
+        V//OolP/zKJT/8mdTf/EnVD/1sGR/+7o2f//////ZmnA/wAAo/8kIZv/s49R/72WQP+4kkH/t5JA/7aQ
+        Pf+yjkD/8O3f///////+/v3////////////////////////////6+/v/MDCQ/wAAhv8wKH7/276A/9y1
+        Yf/NoFT/0aZY/9ClVv/PpFb/zqJT/8eZR//HnlH/x6dw/3Zecv9SQ4P/h21r/8acSP+/l0f/vpZE/7yV
+        RP+6kj7/uZlR//f38P////////7+///////////////////////9/f7//////1NTpP8EA4b/CQqO/0tA
+        gv/SuYj/6sZx/9WqWf/Po1X/0qZY/9GnWP/Rplj/z6NU/82fTf/WqU//06ZO/8+jTP/FnE3/xJtM/8KZ
+        Sv/BmUv/vZI+/8erbv/+/////v79////////////////////////////+/v9//////+HiL//AACF/xYW
+        lP8HCZP/IByL/4x7jP/gxIb/6sRu/9esW//QpFb/0aVY/9GnWf/Rp1n/zaNW/8yhVP/LoFP/yqBR/8mf
+        UP/HnU7/x55Q/7+TQP/Zx53///////39/P////////////////////////////z8/v//////xcbf/woK
+        jP8TEpf/FBSY/w8Pnf8HB5j/NS6S/5WDkP/cwIf/68dz/+C2Yf/UqVj/0qRX/9KmV//Splj/0KZX/8+k
+        Vf/Oo1T/y6FS/8qfT//In1H/7+jX///////+/v3////////////////////////////+/v////////r7
+        +v82NqD/CgqW/xUVnf8VFJ7/Fhai/wwOpP8JCaD/MCmb/3xtl//Cqo//48N//+jDbv/bsmH/1Kpa/9On
+        WP/Splf/0KVW/9ClVv/PplT/17+J//3+//////////////////////////////////////////////z8
+        /f//////kJHI/wUElf8WF6H/FBWi/xUVpP8YF6b/Ghmq/xITrf8ICqn/FRSl/0pDpv+UhaT/0r6a/+PL
+        jP/cvnf/2rds/9i0aP/ZuXL/3cqZ//b06//////////+////////////////////////////////////
+        ///+/v7///////Dw9f81Naj/DQ2j/xQUpP8TFKb/FBSo/xQTqv8XFq3/ISG0/zc3wP9jZM3/ra3h//T0
+        +f/6+vP/9PDh//Dnz//t5Mf/8+/f//3+/f///////v/+////////////////////////////////////
+        //////////////39/v//////ubnd/zAxrv8iI7D/Hh6v/yAhsv8vL7n/TU3D/4CA0f/Cw+T/+Pj4////
+        /////////////////////////////////////v7///7+////////////////////////////////////
+        /////////////////////////f7+///////R0ej/h4bL/2ZmxP9wb8v/o6Ta/9vc7v/+/f3///////7+
+        ///8/P7//////////v///v3//v79//7+/f///v3/////////////////////////////////////////
+        /////////////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
