--- a/ClickForService/Properties/Resources.resx
+++ b/ClickForService/Properties/Resources.resx
@@ -181,4 +181,7 @@
   <data name="about1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\about1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ib" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\information-button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
